# KarmaForge_Reddit

./: .dockerignore  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  KarmaForge_PRD.md  README.md  config.yaml  pyproject.toml  render.yaml
data/generations/: gen_08bf2078.json  gen_0b0f2290.json  gen_134c9507.json  gen_14274bfc.json  gen_15bf0a65.json  gen_15f34cb8.json  gen_170bd143.json  gen_1a7fa057.json  gen_1f2ba6d9.json  gen_1f6e8612.json  gen_2032fa43.json  gen_240aeccc.json  gen_24905f41.json  gen_25394d44.json  gen_2677b792.json  gen_2849c154.json  gen_299eb9c4.json  gen_30951bae.json  gen_34d910a0.json  gen_39e7aa0b.json  gen_3a65ec42.json  gen_3d24e862.json  gen_3dab87be.json  gen_3e48fae2.json  gen_442231a6.json  gen_46010c59.json  gen_4a912e79.json  gen_4d965f51.json  gen_4f2ba7bd.json  gen_5325e041.json  gen_5464293d.json  gen_5588e660.json  gen_5bb0c7e6.json  gen_5c344c02.json  gen_61f626e6.json  gen_6a090aca.json  gen_71d61d14.json  gen_71f5e851.json  gen_736f69f5.json  gen_763e9044.json  (+44 more)
data/patterns/: anti_patterns.json  patterns.json
data/tracking/: evolution_log.md  feedback.jsonl
docs/superpowers/specs/: 2026-05-23-karmaforge-m7-web.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: ErrorBoundary.tsx  Layout.tsx  api.ts  index.css  main.tsx
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  History.tsx  Login.tsx
scripts/: check_db.py  cleanup_keys.ps1  download_arctic_shift.py  download_hf_data.py  download_pullpush.py  restore_db_from_csv.py
src/karmaforge/: __init__.py  cli.py
src/karmaforge/analyzer/: __init__.py  analysis_utils.py  content_analyzer.py  lifecycle_analyzer.py  meta_analyzer.py  pattern_extractor.py  report_generator.py  title_analyzer.py  visual_analyzer.py
src/karmaforge/api/: __init__.py  deps.py  main.py  models.py  notifications.py  prediction.py  routes_auth.py  routes_generate.py  routes_track.py  timing.py
src/karmaforge/collector/: __init__.py  browser_collector.py  kaggle_loader.py  orchestrator.py  praw_collector.py  thirdparty_scraper.py
src/karmaforge/evolution/: __init__.py  evolution_engine.py  failure_attributor.py
src/karmaforge/generator/: __init__.py  body_generator.py  metadata_suggester.py  orchestrator.py  (+4 more)
tests/: conftest.py  test_analysis_utils.py  test_db.py  test_evolution.py  test_generator.py  test_llm_client.py  test_pattern_extractor.py  test_schemas.py  test_title_analyzer.py  test_tracker.py  test_web.py
tests/api/: test_auth.py
分析报告/: 反模式库.md  总览报告.md  时间矩阵.md  标题方法论.md  正文方法论.md  爆款模式库.md
分析报告/数据集/: index.md
(+19 files in other folders)
