[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "karmaforge"
version = "0.1.0"
description = "Reddit Viral Engine v1 - Research Phase"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "大川"}
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "nltk>=3.8",
    "spacy>=3.7",
    "textstat>=0.7",
    "pyyaml>=6.0",
    "praw>=7.7",
    "tqdm>=4.66",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8",
]
browser = [
    "browser-use>=0.1",
    "playwright>=1.40",
]

[project.scripts]
karmaforge = "karmaforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
